[package]
name = "gtk-rust-template"
version = "0.1.0"
edition = "2021"
license = "GPL-v3"
description = "#description#"
homepage = "#website#"
repository = "#repository#"
authors = ["#author#"]
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
relm4 = { version = "0.10.0", features = ["libadwaita", "gnome_48"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
